# shaderator

./: .gitignore  CMakeLists.txt  CNAME  LICENSE.txt  README.md  Shaderator.sln  TargetPlatform.props  shadderator.runsettings
.github/workflows/: build.yml  cmake_multi_platform.yml  cmake_single_platform._yml  cmake_single_platform.yml
ComputeShaderSort11/: CSSortExecutor.cpp  CSSortExecutor.h  ComputeShaderSort11.cpp  ComputeShaderSort11.hlsl  ComputeShaderSort11_2017_Win10.sln  ComputeShaderSort11_2017_Win10.vcxproj
ComputeShaderUnitTests/: ComputeShaderUnitTests.vcxproj  ComputeShaderUnitTests.vcxproj.filters  TestComputeShaderSort11.hlsl.cpp  TestGlslRayTracer.cpp  stdafx.cpp
Shaderator/: Barrier.h  CMakeLists.txt  CpuTimeMeasurement.cpp  CpuTimeMeasurement.h  Engine.cpp  Engine.h  OpenCLEngine.h  Shaderator.vcxproj  Shaderator.vcxproj.filters  Texture2D.cpp  Texture2D.h  ThreadPool.h  access_counting_container.h  cpp_functions.cpp  cpp_include.h  element.h  glsl_include.h  hlsl_include.h  join_threads.h  opencl_include.h  opencl_support.cpp  opencl_support.h  opencl_types.h  shader_types.h  shaderator.h  texture_2d.cpp  texture_2d.h  thread_joiner.h  thread_pool.h  threadsafe_queue.h
ShaderatorGoogleTests/: hlsl_syntax_tests.cpp  thread_pool_tests.cpp
ShaderatorTests/: CMakeLists.txt  ShaderatorTests.vcxproj  ShaderatorTests.vcxproj.filters  access_counting_container_tests.cpp  barrier_tests.cpp  hlsl_syntax_tests.cpp  thread_pool_tests.cpp  threadsafe_queue_tests.cpp
ShaderatorUnitTests/: BarrierTests.cpp  EngineTests.cpp  ShaderatorUnitTests.vcxproj  ShaderatorUnitTests.vcxproj.filters  TestThreadPool.cpp  ThreadsafeQueueTests.cpp  stdafx.cpp  threadsafe_queue_tests.cpp  vectorOperatorsTests.cpp
configs/: recommended_extensions.json
converters/: hlsl.py
converters/test/: test_shaderate.py
examples/: CMakeLists.txt
examples/BasicCompute11/: BasicCompute11.cpp  BasicCompute11_2017_Win10.vcxproj
examples/BasicComputeGoogleTests/: BasicComputeGoogleTests.vcxproj  BasicComputeGoogleTests.vcxproj.filters  basic_compute_byte_address_buffer.hlsl  basic_compute_executor.cpp  basic_compute_executor.h  basic_compute_tests.cpp
examples/BasicComputeTests/: BasicCompute11_StructuredBuffer.hlsl  BasicComputeTests.vcxproj  BasicComputeTests.vcxproj.filters  BasicComputeUnitTests.vcxproj  BasicComputeUnitTests.vcxproj.filters  CMakeLists.txt  basic_compute_executor.cpp  basic_compute_executor.h  shared_types.h  test_BasicCompute11.hlsl.cpp
examples/BitonicSort/: BitonicSort.vcxproj  CMakeLists.txt  CSSortExecutor.cpp  CSSortExecutor.h  ComputeShaderSort11.cpp  ComputeShaderSort11.hlsl  ComputeShaderSort11_2017_Win10.vcxproj  ComputeShaderSort11_2017_Win10.vcxproj.filters  bitonic_sort_executor.cpp  bitonic_sort_executor.h
examples/BitonicSortGoogleTests/: BitonicSortGoogleTests.vcxproj  BitonicSortGoogleTests.vcxproj.filters  bitonic_sort_tests.cpp  test.cpp
examples/BitonicSortTests/: BitonicSortTests.vcxproj  BitonicSortTests.vcxproj.filters  CMakeLists.txt  ComputeShaderUnitTests.vcxproj  ComputeShaderUnitTests.vcxproj.filters  TestComputeShaderSort11.hlsl.cpp  bitonic_sort_tests.cpp  sample_shader.glsl
examples/GLSLTests/: GLSLTests.vcxproj  GLSLTests.vcxproj.filters  ray_tracer.glsl
examples/GlslShadersTests/: CMakeLists.txt  GlslShadersTests.vcxproj  GlslShadersTests.vcxproj.filters  ray_tracer_tests.cpp
examples/OpenCL/: CMakeLists.txt
examples/OpenCL/HelloOpenCLWorld/: HelloOpenCLWorld.cpp  HelloOpenCLWorld.vcxproj  HelloOpenCLWorld.vcxproj.filters  stdafx.cpp  updateGlobal.cl  vectorAdd.cl
examples/OpenCL/IntelBitonicSort/: README_LIN.TXT  README_WIN.TXT
examples/OpenCL/IntelBitonicSort/BitonicSort/: .cproject  .project  BitonicSort.cl  BitonicSort.cpp  IntelBitonicSort.vcxproj  IntelBitonicSort.vcxproj.filters  Makefile  stdafx.cpp  stdafx.h
examples/OpenCL/IntelBitonicSort/common/: yuv_utils.cpp  yuv_utils.h
examples/OpenCL/IntelBitonicSort/templates/: intelocl_win32_debug.props  intelocl_win32_release.props  intelocl_win64_debug.props  intelocl_win64_release.props
examples/OpenCL/IntelBitonicSortTests/: BitonicSort.cl  CMakeLists.txt  IntelBitonicSortTests.filters  IntelBitonicSortTests.vcxproj  intel_bitonic_sort_executor.cpp  intel_bitonic_sort_executor.h  intel_bitonic_sort_tests.cpp  pch.h
glm/detail/: _swizzle.hpp  func_geometric.inl  type_mat2x3.hpp  type_mat2x3.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
